--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -17,7 +17,7 @@
 body {
   color: var(--foreground);
   background: var(--background);
-  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  font-family: monospace;
 }
 
 @layer utilities {
