--- a/src/app/app.css
+++ b/src/app/app.css
@@ -33,9 +33,10 @@
     flex-direction: row;
     border: 2px solid black;
     padding: 12px;
-    width: 70vw;
+    width: 88vw;
     justify-content: space-evenly;
     font-size: 20px;
+    margin-bottom: 20px;
  }
 
  .microsoftPhoto{
@@ -43,6 +44,12 @@
     height: 50px;
     margin-right: 20px;
  }
+
+ .googlePhoto{
+  width: 50px;
+  height: 50px;
+  margin-right: 20px;
+}
 
  .realtime-api-wrapper-div{
    width: 100vw;
@@ -95,9 +102,9 @@
    background-color: #ffffff;
    border-radius: 12px;
    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
-   max-height: 400px;
+   max-height: 60vh;
    overflow-y: auto;
-   height: 400px;
+   height: 60vh;
  }
  
  .realtime-api-demo .message {
